--- a/styles/main.css
+++ b/styles/main.css
@@ -30,6 +30,17 @@
      html { font-size: 120%; }
 }
 
+.clearfix::before,
+.clearfix::after {
+   content: " ";
+   display: table;
+}
+
+.clearfix::after {
+   clear: both;
+}
+
+
 html {
      height: 100%; 
      font-size: 100%;
